syntax = "proto3";

package echo;
option go_package = "pkg/grpc/echo";

service EchoService
{
  rpc EchoUnary(EchoMessage) returns (EchoMessage);

  rpc EchoClientStream(stream EchoMessage) returns (EchoMessage);

  rpc EchoServerStream( EchoMessage) returns (stream EchoMessage);

  rpc EchoBidiStream(stream EchoMessage) returns (stream EchoMessage);

  rpc EchoStatus(StatusCode) returns (StatusCode);
}

message EchoMessage
{
  string message = 1;
}

enum Codes {
  OK = 0;
  Canceled = 1;
  Unknown = 2;
  InvalidArgument = 3;
	DeadlineExceeded = 4;
	NotFound = 5;
	AlreadyExists = 6;
	PermissionDenied = 7;
	ResourceExhausted = 8;
	FailedPrecondition = 9;
	Aborted = 10;
	OutOfRange = 11;
	Unimplemented = 12;
	Internal = 13;
	Unavailable = 14;
	DataLoss = 15;
	Unauthenticated = 16;
}

message StatusCode
{
  Codes code = 1;
}